{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Move",
            "id": "394d12df-2a52-4273-a536-09795c257ab6",
            "actions": [
                {
                    "name": "WASDMove",
                    "type": "Value",
                    "id": "11ee144b-f0f0-46d1-91a5-ff5b9d48c8b3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "fde3bf1d-d3a7-4783-a938-8020d4d758fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6010b7e1-af48-4e3c-a1e6-731333d1ff5d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASDMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f0793477-e6e5-48aa-b9a2-1fb1d13fc7b0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybordMouse",
                    "action": "WASDMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "31f8ee37-b8eb-451f-a7ea-6b9a90ae7389",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybordMouse",
                    "action": "WASDMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0dba9408-e658-4a7a-92b6-52091282a89c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybordMouse",
                    "action": "WASDMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4c9c79ba-c6f8-4c4e-a48e-a73b25aed042",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybordMouse",
                    "action": "WASDMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "37c1a84a-d82d-44e9-bbea-61ffad700583",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybordMouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeybordMouse",
            "bindingGroup": "KeybordMouse",
            "devices": []
        }
    ]
}